--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,33 @@
+body {
+    font-family: 'Roboto', sans-serif;
+    color: #000;
+}
+
+h1 {
+    font-weight: 500;
+}
+
 .main {
     margin: 20px 20px 20px 20px;
+}
+
+.info-text {
+    margin: 0 auto;
+    margin-top: 20px;
+    background: rgb(238, 238, 238);
+    border-radius: 3px;
+    padding: 15px;
+}
+
+.comments {
+    margin: 0 auto;
+    border: solid 1px black;
+    border-radius: 3px;
+    margin-bottom: 20px;
+}
+
+.share {
+    margin-top: 15px;
 }
 
 .verticalform {
